Update notebook params: Update data/notebooks/postgres_example.ipynb

--- a/data/notebooks/postgres_example.ipynb
+++ b/data/notebooks/postgres_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Jonti S Latin & Soul Food', -74.0112807855013, 40.2177291886759, 760.528083688581, 6.9), ('Pascal & Sabine', -74.0102024478343, 40.2170361010522, 852.559714144463, 9.016666666666667), ('Cardinal Provisions', -74.0093831842951, 40.2168760670453, 880.965369533937, 9.9), ('Barrio Costero', -74.0104997003618, 40.2167567101032, 893.780302984483, 9.116666666666667), ('The Bonney Read', -74.0094819989764, 40.2165348702625, 929.381059187401, 10.666666666666666), (\"Lola's European Cafe\", -74.0097496070995, 40.2164179135915, 944.201640732824, 10.9), ('Cross & Orange', -74.0086790847755, 40.2164337593459, 956.12091627585, 11.066666666666666), ('Asbury Ale House', -74.0100469494586, 40.2163148817998, 957.914888938367, 10.566666666666666), ('Toast Asbury Park', -74.0088406018635, 40.2163919841674, 959.043693106551, 10.9), ('Brickwall Tavern & Dining Room', -74.009011191936, 40.2163384103786, 963.891752771227, 10.7), (\"DJ's Delights Deli & Restaurant\", -74.0112886906758, 40.2161490153772, 988.894427663788, 9.566666666666666), ('Twisted Tree Cafe', -74.0109639497006, 40.2160476980946, 999.968517183353, 10.666666666666666), (\"Talula's\", -74.0096664231042, 40.2160243066084, 1002.03326542301, 11.133333333333333), ('Moonstruck', -74.0087279531269, 40.2160545577665, 1009.6229146213, 12.783333333333333), ('Capitoline', -74.0116454116751, 40.2159987886142, 1016.0299860377, 10.116666666666667), ('Juice Beach', -74.0122477320731, 40.2158963735571, 1043.1239344411, 9.65), ('Asbury Festhalle & Biergarten', -74.0095932104086, 40.2156962761769, 1050.28338441573, 11.75), ('Belmontes Ristorante', -74.0112413494603, 40.2156630065861, 1058.70265776897, 11.033333333333333), ('Frutta Bowls', -74.0114337685942, 40.215678921114, 1058.88828203082, 10.633333333333333), ('MOGO Korean Fusion Tacos', -74.0113202215423, 40.2156593709391, 1060.19697223689, 10.966666666666667), ('Taka', -74.0120135412786, 40.2155815131688, 1082.91793688988, 10.383333333333333), (\"Brando's Citi Cucina\", -74.0131646424836, 40.2156230144584, 1107.75066583951, 11.45), ('Crust & Crumble Pizza', -74.0117468314707, 40.2152609577237, 1124.05427814649, 11.283333333333333), (\"Pop's Garage\", -73.9998508913208, 40.2207973744371, 1194.99068525222, 11.533333333333333), ('Cubacan Restaurant & Bar', -74.000631078145, 40.218782319829, 1224.68479516967, 12.466666666666667), ('Stella Marina Bar & Restaurant', -74.0008042733318, 40.218251606332, 1248.01076445163, 13.116666666666667), ('Asbury Oyster Bar', -73.9983457640622, 40.2235748098574, 1326.99735490436, 14.35), (\"The Anchor's Bend\", -73.9982259288033, 40.2239856573295, 1346.1262818133, 14.9), ('Dunes', -74.0008601485425, 40.2165123706957, 1396.87980846684, 15.516666666666667), (\"McGuillicuddy's Lakeside Tap House\", -74.0079530663628, 40.2327378997856, 1458.97202411162, 15.316666666666666)]\n"
+      "indochine (0.150000 min) 31.074602482557\n",
+      "Teri Teri Japanese Restaurant (0.300000 min) 39.1919317367822\n",
+      "Garden State Ale House (0.600000 min) 69.2063645738383\n",
+      "Hotoke (0.833333 min) 93.3933521156638\n",
+      "Panico's Brick Oven Pizza (1.316667 min) 93.7376430640566\n",
+      "My Way Korean Restaurant (0.833333 min) 95.0082891699802\n",
+      "Shalimar Halal Gyro Grill (0.900000 min) 101.42240974455\n",
+      "Salt Seafood & Oyster Bar (1.433333 min) 133.905433785702\n",
+      "Ramen Nagomi (2.066667 min) 148.212932556758\n",
+      "Steakhouse 85 (1.766667 min) 157.394200222384\n",
+      "Fiesta Mexican Restaurant (1.450000 min) 160.10961500766\n",
+      "Filippo's Famous Pizza (1.766667 min) 195.478279451293\n",
+      "Old Man Rafferty's (2.300000 min) 196.342101257956\n",
+      "Catherine Lombardi Restaurant (1.933333 min) 213.216244381457\n",
+      "Stage Left (2.333333 min) 222.9482753767\n",
+      "Due Mari (3.533333 min) 269.520397611065\n",
+      "INC American Bar and Kitchen (3.516667 min) 389.40160405114\n",
+      "KBG Korean BBQ & Grill (5.116667 min) 421.491258359564\n",
+      "RU Hungry (10.783333 min) 728.559538999156\n",
+      "honeygrow (10.916667 min) 732.72101492516\n",
+      "The Original Picken Chicken (8.350000 min) 877.639099521446\n",
+      "Hansel and Griddle (12.033333 min) 1138.45742294669\n",
+      "Diesel & Duke (12.433333 min) 1219.22086275513\n",
+      "King's Palace (16.816667 min) 1430.64175741917\n",
+      "Namli (16.566667 min) 1541.54031910913\n",
+      "Hunan Manor (17.933333 min) 1806.21331916516\n",
+      "Pitthari Restuarant (23.950000 min) 2182.66994979559\n",
+      "Chef Tan (23.216667 min) 2307.31501823408\n",
+      "Highland Pizza (25.083333 min) 2515.55636449283\n",
+      "La Rosa Pizzeria (30.300000 min) 3022.82023695438\n",
+      "Asian Garden (32.583333 min) 3280.15125343996\n",
+      "On The Border Mexican Grill & Cantina (35.750000 min) 3302.14849127926\n",
+      "Houlihan's (34.283333 min) 3314.40323562991\n",
+      "Fuddruckers (43.000000 min) 3473.50499427446\n",
+      "Sbarro's (51.666667 min) 4197.50792507348\n",
+      "Hoja Asian Fusion (58.450000 min) 4514.73169039353\n",
+      "Chandi Chownk (46.033333 min) 4708.74960066848\n",
+      "Paris Baguette (48.233333 min) 4743.90697367737\n",
+      "Spicy 24 (47.716667 min) 4756.34141474269\n",
+      "Kungfu Tea (47.583333 min) 4758.71229189448\n",
+      "Boom Boom Chicken (48.133333 min) 4765.76229418215\n",
+      "Little Sheep Mongolian Hot Pot (47.750000 min) 4780.97875743998\n",
+      "Tofu House (48.266667 min) 4781.75872028024\n",
+      "Chilli's - North Brunswick (51.666667 min) 4982.55339551034\n"
      ]
     }
    ],
@@ -61,10 +104,12 @@
     "import psycopg2\n",
     "conn = psycopg2.connect(host=\"postgres\",database=\"osm\", user=\"osm\", password=\"osm\")\n",
     "cursor = conn.cursor()\n",
-    "lat = 40.222884\n",
-    "lon = -74.010232\n",
-    "distance_in_meters = 2000\n",
+    "\n",
+    "lat = 40.4952385\n",
+    "lon = -74.4439958\n",
+    "distance_in_meters = 5000\n",
     "amenity = 'restaurant'\n",
+    "\n",
     "cursor.execute(\"\"\"\n",
     "select * FROM (\n",
     "    select\n",
@@ -101,9 +146,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                     Name     Distance       Time  \\\n",
+      "0                               indochine    31.074602   0.150000   \n",
+      "1           Teri Teri Japanese Restaurant    39.191932   0.300000   \n",
+      "2                  Garden State Ale House    69.206365   0.600000   \n",
+      "3                                  Hotoke    93.393352   0.833333   \n",
+      "4               Panico's Brick Oven Pizza    93.737643   1.316667   \n",
+      "5                My Way Korean Restaurant    95.008289   0.833333   \n",
+      "6               Shalimar Halal Gyro Grill   101.422410   0.900000   \n",
+      "7               Salt Seafood & Oyster Bar   133.905434   1.433333   \n",
+      "8                            Ramen Nagomi   148.212933   2.066667   \n",
+      "9                           Steakhouse 85   157.394200   1.766667   \n",
+      "10              Fiesta Mexican Restaurant   160.109615   1.450000   \n",
+      "11                 Filippo's Famous Pizza   195.478279   1.766667   \n",
+      "12                     Old Man Rafferty's   196.342101   2.300000   \n",
+      "13          Catherine Lombardi Restaurant   213.216244   1.933333   \n",
+      "14                             Stage Left   222.948275   2.333333   \n",
+      "15                               Due Mari   269.520398   3.533333   \n",
+      "16           INC American Bar and Kitchen   389.401604   3.516667   \n",
+      "17                 KBG Korean BBQ & Grill   421.491258   5.116667   \n",
+      "18                              RU Hungry   728.559539  10.783333   \n",
+      "19                              honeygrow   732.721015  10.916667   \n",
+      "20            The Original Picken Chicken   877.639100   8.350000   \n",
+      "21                     Hansel and Griddle  1138.457423  12.033333   \n",
+      "22                          Diesel & Duke  1219.220863  12.433333   \n",
+      "23                          King's Palace  1430.641757  16.816667   \n",
+      "24                                  Namli  1541.540319  16.566667   \n",
+      "25                            Hunan Manor  1806.213319  17.933333   \n",
+      "26                    Pitthari Restuarant  2182.669950  23.950000   \n",
+      "27                               Chef Tan  2307.315018  23.216667   \n",
+      "28                         Highland Pizza  2515.556364  25.083333   \n",
+      "29                       La Rosa Pizzeria  3022.820237  30.300000   \n",
+      "30                           Asian Garden  3280.151253  32.583333   \n",
+      "31  On The Border Mexican Grill & Cantina  3302.148491  35.750000   \n",
+      "32                             Houlihan's  3314.403236  34.283333   \n",
+      "33                            Fuddruckers  3473.504994  43.000000   \n",
+      "34                               Sbarro's  4197.507925  51.666667   \n",
+      "35                      Hoja Asian Fusion  4514.731690  58.450000   \n",
+      "36                          Chandi Chownk  4708.749601  46.033333   \n",
+      "37                         Paris Baguette  4743.906974  48.233333   \n",
+      "38                               Spicy 24  4756.341415  47.716667   \n",
+      "39                             Kungfu Tea  4758.712292  47.583333   \n",
+      "40                      Boom Boom Chicken  4765.762294  48.133333   \n",
+      "41         Little Sheep Mongolian Hot Pot  4780.978757  47.750000   \n",
+      "42                             Tofu House  4781.758720  48.266667   \n",
+      "43             Chilli's - North Brunswick  4982.553396  51.666667   \n",
+      "\n",
+      "                                    Coordinates  \n",
+      "0   POINT (-74.44379507079761 40.4953853623919)  \n",
+      "1   POINT (-74.44374692109839 40.4950487827626)  \n",
+      "2   POINT (-74.44420964330121 40.4956819773411)  \n",
+      "3    POINT (-74.4439476945644 40.4946010547774)  \n",
+      "4    POINT (-74.4436836797024 40.4958326752675)  \n",
+      "5    POINT (-74.4436433453461 40.4946469617208)  \n",
+      "6   POINT (-74.44363121808981 40.4946031041952)  \n",
+      "7     POINT (-74.4436321164051 40.496109887523)  \n",
+      "8    POINT (-74.4447142269963 40.4943854556767)  \n",
+      "9    POINT (-74.4433076449245 40.4961771751944)  \n",
+      "10  POINT (-74.44384277133921 40.4941504546004)  \n",
+      "11   POINT (-74.4437892317483 40.4939119003404)  \n",
+      "12  POINT (-74.44380369462429 40.4965712678255)  \n",
+      "13   POINT (-74.44382139143541 40.493787499286)  \n",
+      "14   POINT (-74.4438956821094 40.4937168617916)  \n",
+      "15   POINT (-74.4425780332507 40.4967303661015)  \n",
+      "16   POINT (-74.4435588138779 40.4925986753791)  \n",
+      "17  POINT (-74.44717983295661 40.4967963552285)  \n",
+      "18  POINT (-74.44825529601481 40.4990167217258)  \n",
+      "19   POINT (-74.4481661831386 40.4991105788188)  \n",
+      "20    POINT (-74.441700019892 40.4895021827848)  \n",
+      "21   POINT (-74.4528192766473 40.4991702811517)  \n",
+      "22  POINT (-74.45325415107629 40.4996878585314)  \n",
+      "23   POINT (-74.4526058369358 40.5024933767605)  \n",
+      "24   POINT (-74.4572267707573 40.4983466028579)  \n",
+      "25   POINT (-74.4285696148786 40.4990624207198)  \n",
+      "26   POINT (-74.4245925036212 40.4973819888087)  \n",
+      "27    POINT (-74.4244794955585 40.500545401072)  \n",
+      "28  POINT (-74.42286692979199 40.5013316201031)  \n",
+      "29   POINT (-74.41796042154159 40.501104293775)  \n",
+      "30   POINT (-74.4157180469294 40.5015366093195)  \n",
+      "31   POINT (-74.4217275066856 40.4803334724777)  \n",
+      "32    POINT (-74.423001587253 40.4791813082442)  \n",
+      "33   POINT (-74.4160903087831 40.4846206042555)  \n",
+      "34   POINT (-74.4370259058057 40.5234124814087)  \n",
+      "35    POINT (-74.438742316819 40.5258127781567)  \n",
+      "36     POINT (-74.40745498362 40.5114392808492)  \n",
+      "37   POINT (-74.4082863744154 40.5129215777963)  \n",
+      "38  POINT (-74.40795606388551 40.5126884856309)  \n",
+      "39   POINT (-74.4078627289274 40.5126068724486)  \n",
+      "40   POINT (-74.4082269957751 40.5131251656903)  \n",
+      "41    POINT (-74.4078064943906 40.512823095943)  \n",
+      "42   POINT (-74.4081103046197 40.5131890898395)  \n",
+      "43  POINT (-74.45730645132301 40.4627325582008)  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
@@ -122,12 +265,13 @@
     "# GeoPandas needs a Shapely geometry, so convert that lon,lat to a Point\n",
     "df['Coordinates'] = df['Coordinates'].apply(Point)\n",
     "\n",
-    "gdf = gpd.GeoDataFrame(df, geometry='Coordinates')\n"
+    "gdf = gpd.GeoDataFrame(df, geometry='Coordinates')\n",
+    "print (gdf)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "metadata": {
     "scrolled": true
    },
@@ -135,7 +279,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb32d35e29044301b42d6b7f091ddece",
+       "model_id": "890594ac334a4326819ce78769b97d73",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,8 +318,21 @@
     "    layers=(basemap_to_tiles(basemaps.CartoDB.DarkMatter), )\n",
     ")\n",
     "\n",
+    "# There's got to be a better way to do popups!\n",
     "out_data = json.loads(gdf.to_json())\n",
-    "geo_json = GeoJSON(data=out_data)\n",
+    "popups = list(map(lambda x: Popup(child=HTML(value=x['properties']['Name']),\n",
+    "                                  location=(x['geometry']['coordinates'][1],\n",
+    "                                            x['geometry']['coordinates'][0])),\n",
+    "                                  out_data['features']))\n",
+    "\n",
+    "def click_handler(event=None, id=None, properties=None, type=None, coordinates=None):\n",
+    "    if (id):\n",
+    "        m.add_layer(popups[int(id)])\n",
+    "        \n",
+    "out_data = json.loads(gdf.to_json())\n",
+    "geo_json = GeoJSON(data=out_data, onEachLayer=(lambda x: print (x)))\n",
+    "geo_json.on_click(click_handler)\n",
+    "\n",
     "m.add_layer(geo_json)\n",
     "\n",
     "m = fitBounds(m, out_data)\n",
@@ -186,82 +343,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                  Name     Distance       Time  \\\n",
-      "0            Jonti S Latin & Soul Food   760.528084   6.900000   \n",
-      "1                      Pascal & Sabine   852.559714   9.016667   \n",
-      "2                  Cardinal Provisions   880.965370   9.900000   \n",
-      "3                       Barrio Costero   893.780303   9.116667   \n",
-      "4                      The Bonney Read   929.381059  10.666667   \n",
-      "5                 Lola's European Cafe   944.201641  10.900000   \n",
-      "6                       Cross & Orange   956.120916  11.066667   \n",
-      "7                     Asbury Ale House   957.914889  10.566667   \n",
-      "8                    Toast Asbury Park   959.043693  10.900000   \n",
-      "9       Brickwall Tavern & Dining Room   963.891753  10.700000   \n",
-      "10     DJ's Delights Deli & Restaurant   988.894428   9.566667   \n",
-      "11                   Twisted Tree Cafe   999.968517  10.666667   \n",
-      "12                            Talula's  1002.033265  11.133333   \n",
-      "13                          Moonstruck  1009.622915  12.783333   \n",
-      "14                          Capitoline  1016.029986  10.116667   \n",
-      "15                         Juice Beach  1043.123934   9.650000   \n",
-      "16       Asbury Festhalle & Biergarten  1050.283384  11.750000   \n",
-      "17                Belmontes Ristorante  1058.702658  11.033333   \n",
-      "18                        Frutta Bowls  1058.888282  10.633333   \n",
-      "19            MOGO Korean Fusion Tacos  1060.196972  10.966667   \n",
-      "20                                Taka  1082.917937  10.383333   \n",
-      "21                Brando's Citi Cucina  1107.750666  11.450000   \n",
-      "22               Crust & Crumble Pizza  1124.054278  11.283333   \n",
-      "23                        Pop's Garage  1194.990685  11.533333   \n",
-      "24            Cubacan Restaurant & Bar  1224.684795  12.466667   \n",
-      "25      Stella Marina Bar & Restaurant  1248.010764  13.116667   \n",
-      "26                   Asbury Oyster Bar  1326.997355  14.350000   \n",
-      "27                   The Anchor's Bend  1346.126282  14.900000   \n",
-      "28                               Dunes  1396.879808  15.516667   \n",
-      "29  McGuillicuddy's Lakeside Tap House  1458.972024  15.316667   \n",
-      "\n",
-      "                                    Coordinates  \n",
-      "0    POINT (-74.0112807855013 40.2177291886759)  \n",
-      "1    POINT (-74.0102024478343 40.2170361010522)  \n",
-      "2    POINT (-74.0093831842951 40.2168760670453)  \n",
-      "3   POINT (-74.01049970036181 40.2167567101032)  \n",
-      "4    POINT (-74.0094819989764 40.2165348702625)  \n",
-      "5   POINT (-74.00974960709949 40.2164179135915)  \n",
-      "6   POINT (-74.00867908477549 40.2164337593459)  \n",
-      "7    POINT (-74.0100469494586 40.2163148817998)  \n",
-      "8    POINT (-74.0088406018635 40.2163919841674)  \n",
-      "9     POINT (-74.009011191936 40.2163384103786)  \n",
-      "10   POINT (-74.0112886906758 40.2161490153772)  \n",
-      "11   POINT (-74.0109639497006 40.2160476980946)  \n",
-      "12  POINT (-74.00966642310421 40.2160243066084)  \n",
-      "13  POINT (-74.00872795312689 40.2160545577665)  \n",
-      "14   POINT (-74.0116454116751 40.2159987886142)  \n",
-      "15  POINT (-74.01224773207311 40.2158963735571)  \n",
-      "16   POINT (-74.0095932104086 40.2156962761769)  \n",
-      "17  POINT (-74.01124134946031 40.2156630065861)  \n",
-      "18    POINT (-74.0114337685942 40.215678921114)  \n",
-      "19  POINT (-74.01132022154231 40.2156593709391)  \n",
-      "20  POINT (-74.01201354127861 40.2155815131688)  \n",
-      "21   POINT (-74.0131646424836 40.2156230144584)  \n",
-      "22   POINT (-74.0117468314707 40.2152609577237)  \n",
-      "23   POINT (-73.9998508913208 40.2207973744371)  \n",
-      "24   POINT (-74.00063107814501 40.218782319829)  \n",
-      "25    POINT (-74.0008042733318 40.218251606332)  \n",
-      "26  POINT (-73.99834576406219 40.2235748098574)  \n",
-      "27  POINT (-73.99822592880329 40.2239856573295)  \n",
-      "28   POINT (-74.0008601485425 40.2165123706957)  \n",
-      "29   POINT (-74.0079530663628 40.2327378997856)  \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(gdf)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
